# Data-Science

./: .gitignore  CHANGELOG.md  IMPLEMENTATION.md  LICENSE  README.md  check.py  data.md  diagnose_output.txt  eps_values.txt  explorer_output.txt  pyproject.toml  requirements.txt  research_design.md
config/: _tune_log.json  deploy_choice.json  feature_sets.json  hparams.json  hparams_L1.json
data/: forward_log.parquet
deploy/: manifest.json
docs/: README.md  index.html  phase1_ablation_l1.md  phase1_step10_tuning.md  phase1_step11_train_infer.md  phase1_step12_evaluate.md  phase1_step13_web.md  phase1_step1_collect_raw.md  phase1_step2_eda.md  phase1_step3_clean_data.md  phase1_step4_integrate_data.md  phase1_step5_features.md  phase1_step6_labeling.md  phase1_step7_assemble.md  phase1_step8_walkforward.md  phase1_step9_baselines.md  session01_data_acquisition.md  session02_asof_join.md  session03_l1_l2_features.md  session04_l3_macro_loaders.md
notebook/: eda_phase0.ipynb  eda_train_only.ipynb
notebooks/: 00_data_source_verification.ipynb
reports/: results.json
scripts/: ablation_l1_phase1.py  acquire_data.py  assemble_phase1.py  baselines_phase1.py  clean_phase1.py  diagnose_explorer.py  diagnose_session1.py  evaluate_phase1.py  features_phase1.py  fetch_phase1.py  inspect_html.py  integrate_phase1.py  label_phase1.py  phase2_update.py  publish_phase3.py  run_phase2.bat  seed_forward_log.py  serve_phase1.py  split_phase1.py  train_infer_phase1.py  tune_phase1.py  web_app_phase1.py  web_build_phase1.py  web_serve_phase1.py
tests/: test_asof_join.py  (+5 more)
(+49 files in other folders)
